@@ -6,10 +6,13 @@
 
 package fll.web;
 
+import static org.hamcrest.MatcherAssert.assertThat;
+import static org.hamcrest.Matchers.lessThan;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.junit.jupiter.api.Assertions.fail;
 
 import java.io.BufferedReader;
 import java.io.BufferedWriter;
@@ -21,30 +24,37 @@ import java.io.InputStreamReader;
 import java.io.Reader;
 import java.io.StringReader;
 import java.io.Writer;
+import java.net.CookieManager;
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URISyntaxException;
 import java.net.URL;
+import java.net.URLEncoder;
+import java.net.http.HttpClient;
+import java.net.http.HttpRequest;
+import java.net.http.HttpRequest.BodyPublishers;
+import java.net.http.HttpResponse;
+import java.net.http.HttpResponse.BodyHandlers;
 import java.nio.charset.Charset;
+import java.nio.charset.StandardCharsets;
+import java.nio.file.DirectoryStream;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.nio.file.StandardCopyOption;
 import java.time.Duration;
 import java.util.Collection;
+import java.util.HashMap;
 import java.util.HashSet;
+import java.util.Map;
+import java.util.Optional;
 import java.util.Set;
+import java.util.stream.Collectors;
 
 import javax.annotation.Nonnull;
 
 import org.apache.catalina.LifecycleException;
-import org.apache.http.Header;
 import org.apache.http.client.ClientProtocolException;
-import org.apache.http.client.methods.CloseableHttpResponse;
-import org.apache.http.client.methods.HttpGet;
-import org.apache.http.client.methods.HttpRequestBase;
-import org.apache.http.impl.client.CloseableHttpClient;
-import org.apache.http.impl.client.HttpClientBuilder;
-import org.apache.http.protocol.BasicHttpContext;
 import org.fest.swing.image.ScreenshotTaker;
 import org.junit.jupiter.api.extension.AfterTestExecutionCallback;
 import org.junit.jupiter.api.extension.BeforeTestExecutionCallback;
@@ -79,6 +89,7 @@ import fll.Tournament;
 import fll.Utilities;
 import fll.tomcat.TomcatLauncher;
 import fll.util.FLLInternalException;
+import fll.util.FLLRuntimeException;
 import fll.web.api.TournamentsServlet;
 import fll.xml.BracketSortType;
 import io.github.bonigarcia.wdm.WebDriverManager;
@@ -95,7 +106,7 @@ public final class IntegrationTestUtils {
   /**
    * Username used for integration tests.
    */
-  public static final String TEST_USERNAME = "fll";
+  public static final String TEST_USERNAME = "fll_test";
 
   /**
    * Password used for integration tests.
@@ -251,7 +262,7 @@ public final class IntegrationTestUtils {
 
     if (isElementPresent(driver, By.name("submit_login"))) {
       LOGGER.trace("Login required");
-      login(driver, driverWait);
+      login(driver);
 
       LOGGER.trace("Visiting setup after login");
       driver.get(TestUtils.URL_ROOT
@@ -280,7 +291,7 @@ public final class IntegrationTestUtils {
     createUser(driver, driverWait);
 
     LOGGER.trace("Finished with create user, calling login");
-    login(driver, driverWait);
+    login(driver);
   }
 
   /**
@@ -297,6 +308,7 @@ public final class IntegrationTestUtils {
                                                 final InputStream inputStream)
       throws IOException {
     assertNotNull(inputStream);
+
     final File dumpFile = IntegrationTestUtils.storeInputStreamToFile(inputStream);
     try {
       selenium.get(TestUtils.URL_ROOT
@@ -307,7 +319,7 @@ public final class IntegrationTestUtils {
                                                ExpectedConditions.urlContains("/setup")));
 
       if (isElementPresent(selenium, By.name("submit_login"))) {
-        login(selenium, seleniumWait);
+        login(selenium);
 
         selenium.get(TestUtils.URL_ROOT
             + "setup/");
@@ -333,13 +345,13 @@ public final class IntegrationTestUtils {
 
       createUser(selenium, seleniumWait);
 
-      login(selenium, seleniumWait);
+      login(selenium);
     } finally {
       if (!dumpFile.delete()) {
         dumpFile.deleteOnExit();
       }
     }
-    login(selenium, seleniumWait);
+    login(selenium);
   }
 
   /**
@@ -358,6 +370,15 @@ public final class IntegrationTestUtils {
 
   private static void createUser(final WebDriver selenium,
                                  final WebDriverWait seleniumWait) {
+
+    seleniumWait.until(ExpectedConditions.or(ExpectedConditions.urlContains("createUsername.jsp"),
+                                             ExpectedConditions.presenceOfElementLocated(By.name("submit_create_admin"))));
+
+    if (isElementPresent(selenium, By.name("submit_create_admin"))) {
+      // create new admin user
+      selenium.findElement(By.name("submit_create_admin")).click();
+    }
+
     seleniumWait.until(ExpectedConditions.urlContains("createUsername.jsp"));
 
     final WebElement userElement = seleniumWait.until(ExpectedConditions.elementToBeClickable(By.name("user")));
@@ -447,13 +468,18 @@ public final class IntegrationTestUtils {
     LOGGER.info("HTML saved to "
         + htmlFile.toAbsolutePath().toString());
 
-    // get the database
-    final Path dbOutput = tempDir.resolve("database.flldb");
-    LOGGER.info("Downloading database to "
-        + dbOutput.toAbsolutePath());
-    downloadFile(new URL(TestUtils.URL_ROOT
-        + "admin/database.flldb"), null, dbOutput);
-
+    try {
+      // get the database
+      final Path dbOutput = tempDir.resolve("database.flldb");
+      LOGGER.info("Downloading database to "
+          + dbOutput.toAbsolutePath());
+      downloadFile(new URI(TestUtils.URL_ROOT
+          + "admin/database.flldb"), null, dbOutput);
+    } catch (final URISyntaxException e) {
+      LOGGER.error("Error creating address to download database for screen shot", e);
+    } catch (final InterruptedException e) {
+      LOGGER.error("Interrupted downloading database for screen shot", e);
+    }
   }
 
   /**
@@ -480,10 +506,8 @@ public final class IntegrationTestUtils {
    * Login to software.
    *
    * @param driver browser driver
-   * @param seleniumWait wait for elements
    */
-  public static void login(final WebDriver driver,
-                           final WebDriverWait seleniumWait) {
+  public static void login(final WebDriver driver) {
     driver.get(TestUtils.URL_ROOT
         + "login.jsp");
 
@@ -495,8 +519,6 @@ public final class IntegrationTestUtils {
 
     final WebElement submitElement = driver.findElement(By.name("submit_login"));
     submitElement.click();
-
-    seleniumWait.until(ExpectedConditions.not(ExpectedConditions.urlContains("login.jsp")));
   }
 
   private static String readAll(final Reader rd) throws IOException {
@@ -804,7 +826,7 @@ public final class IntegrationTestUtils {
 
     selenium.findElement(By.id("submit_data")).click();
 
-    selenium.findElement(By.id("success"));
+    seleniumWait.until(ExpectedConditions.presenceOfElementLocated(By.id("success")));
   }
 
   /**
@@ -834,6 +856,47 @@ public final class IntegrationTestUtils {
   }
 
   /**
+   * HTTP codes with this value and greater are errors.
+   */
+  private static final int HTTP_ERROR_BASE = 400;
+
+  /**
+   * Login to the software. This depends on {@code client} having a cookie handler
+   * to track the session cookie.
+   * This is used to login without selenium.
+   * 
+   * @param client the client to make the request with
+   * @throws InterruptedException if the client is interrupted posting to the
+   *           login page
+   * @throws IOException if there is an error posting to the login page
+   */
+  private static void login(final HttpClient client) throws IOException, InterruptedException {
+    final Map<String, String> loginData = new HashMap<>();
+    loginData.put("user", TEST_USERNAME);
+    loginData.put("pass", TEST_PASSWORD);
+
+    final String formData = loginData.entrySet().stream().map(entry -> entry.getKey()
+        + "="
+        + URLEncoder.encode(entry.getValue(), StandardCharsets.UTF_8)).collect(Collectors.joining("&"));
+
+    try {
+      final HttpRequest loginRequest = HttpRequest.newBuilder()//
+                                                  .uri(new URI(TestUtils.URL_ROOT
+                                                      + "DoLogin")) //
+                                                  .header("Content-Type", "application/x-www-form-urlencoded")
+                                                  .POST(BodyPublishers.ofString(formData, StandardCharsets.UTF_8))
+                                                  .build();
+      final HttpResponse<String> loginResponse = client.send(loginRequest, BodyHandlers.ofString());
+      assertThat("Error logging in", loginResponse.statusCode(), lessThan(HTTP_ERROR_BASE));
+    } catch (final URISyntaxException e) {
+      LOGGER.error("Error creating login address", e);
+      fail("Internal error, login address does not convert to a URI: "
+          + e.getMessage());
+    }
+
+  }
+
+  /**
    * Download the specified file and check the content type.
    * If the content type doesn't match an assertion violation will be thrown.
    *
@@ -845,46 +908,38 @@ public final class IntegrationTestUtils {
    *          overwritten.
    * @throws ClientProtocolException if there is an error talking to the server
    * @throws IOException if there is an error talking to the server
+   * @throws InterruptedException if the request is interrupted
    */
-  public static void downloadFile(final URL urlToLoad,
+  public static void downloadFile(final URI urlToLoad,
                                   final String expectedContentType,
                                   final Path destination)
-      throws ClientProtocolException, IOException {
+      throws ClientProtocolException, IOException, InterruptedException {
 
-    try (CloseableHttpClient client = HttpClientBuilder.create().build()) {
-      final BasicHttpContext localContext = new BasicHttpContext();
+    final HttpClient client = HttpClient.newBuilder().cookieHandler(new CookieManager()).build();
 
-      // if (this.mimicWebDriverCookieState) {
-      // localContext.setAttribute(ClientContext.COOKIE_STORE,
-      // mimicCookieState(selenium.manage().getCookies()));
-      // }
-      final HttpRequestBase requestMethod = new HttpGet();
-      requestMethod.setURI(urlToLoad.toURI());
-      // HttpParams httpRequestParameters = requestMethod.getParams();
-      // httpRequestParameters.setParameter(ClientPNames.HANDLE_REDIRECTS,
-      // this.followRedirects);
-      // requestMethod.setParams(httpRequestParameters);
+    login(client);
 
-      try (CloseableHttpResponse response = client.execute(requestMethod, localContext)) {
+    final HttpRequest downloadRequest = HttpRequest.newBuilder().uri(urlToLoad).build();
 
-        if (null != expectedContentType) {
-          final Header contentTypeHeader = response.getFirstHeader("Content-type");
-          assertNotNull(contentTypeHeader, "Null content type header: "
-              + urlToLoad.toString());
-          final String contentType = contentTypeHeader.getValue().split(";")[0].trim();
-          assertEquals(expectedContentType, contentType, "Unexpected content type from: "
-              + urlToLoad.toString());
-        }
+    final HttpResponse<InputStream> downloadResponse = client.send(downloadRequest, BodyHandlers.ofInputStream());
+    assertThat("Error downloading content from "
+        + urlToLoad, downloadResponse.statusCode(), lessThan(HTTP_ERROR_BASE));
 
-        if (null != destination) {
-          try (InputStream stream = response.getEntity().getContent()) {
-            Files.copy(stream, destination, StandardCopyOption.REPLACE_EXISTING);
-          } // try create stream
-        } // non-null destination
-      }
-    } catch (final URISyntaxException e) {
-      throw new FLLInternalException("Got exception turning URL into URI, this shouldn't happen", e);
+    if (null != expectedContentType) {
+      final Optional<String> contentTypeHeader = downloadResponse.headers().firstValue("Content-type");
+      assertTrue(contentTypeHeader.isPresent(), "Null content type header: "
+          + urlToLoad.toString());
+
+      final String contentType = contentTypeHeader.get().split(";")[0].trim();
+      assertEquals(expectedContentType, contentType, "Unexpected content type from: "
+          + urlToLoad.toString());
     }
+
+    if (null != destination) {
+      try (InputStream stream = downloadResponse.body()) {
+        Files.copy(stream, destination, StandardCopyOption.REPLACE_EXISTING);
+      } // try create stream
+    } // non-null destination
   }
 
   /**
@@ -904,6 +959,10 @@ public final class IntegrationTestUtils {
 
     @Override
     public void beforeTestExecution(final ExtensionContext context) throws Exception {
+      // remove the database first to ensure that we are always at the same starting
+      // state
+      removeDatabase();
+
       final TomcatLauncher launcher = new TomcatLauncher(Launcher.DEFAULT_WEB_PORT);
       try {
         LOGGER.info("Starting tomcat");
@@ -924,25 +983,25 @@ public final class IntegrationTestUtils {
 
     @Override
     public void afterTestExecution(final ExtensionContext context) throws Exception {
+      final WebDriver selenium = getStore(context).remove(WEBDRIVER_KEY, WebDriver.class);
+      if (null != selenium) {
+        LOGGER.info("Shutting down selenium");
+        selenium.quit();
+      } else {
+        LOGGER.error("Selenium doesn't exist, cannot be shutdown");
+      }
+
       final TomcatLauncher launcher = getStore(context).remove(TOMCAT_LAUNCHER_KEY, TomcatLauncher.class);
       try {
         if (null != launcher) {
           LOGGER.info("Stopping tomcat");
           launcher.stop();
         } else {
-          LOGGER.warn("Tomcat doesn't exist");
+          LOGGER.error("Tomcat doesn't exist, cannot be shutdown");
         }
       } catch (final LifecycleException e) {
         LOGGER.error("Error shutting down tomcat", e);
         throw new RuntimeException(e);
-      }
-
-      final WebDriver selenium = getStore(context).remove(WEBDRIVER_KEY, WebDriver.class);
-      if (null != selenium) {
-        LOGGER.info("Shutting down selenium");
-        selenium.quit();
-      } else {
-        LOGGER.warn("Selenium doesn't exist");
       }
     }
 
@@ -961,14 +1020,14 @@ public final class IntegrationTestUtils {
         throws ParameterResolutionException {
       final Class<?> type = parameterContext.getParameter().getType();
       if (WebDriver.class.isAssignableFrom(type)) {
-        final WebDriver selenium = getStore(extensionContext).remove(WEBDRIVER_KEY, WebDriver.class);
+        final WebDriver selenium = getStore(extensionContext).get(WEBDRIVER_KEY, WebDriver.class);
         if (null != selenium) {
           return selenium;
         } else {
           throw new ParameterResolutionException("The webdriver has not been created. This is an internal error");
         }
       } else if (WebDriverWait.class.isAssignableFrom(type)) {
-        final WebDriverWait wait = getStore(extensionContext).remove(WAIT_KEY, WebDriverWait.class);
+        final WebDriverWait wait = getStore(extensionContext).get(WAIT_KEY, WebDriverWait.class);
         if (null != wait) {
           return wait;
         } else {
@@ -979,6 +1038,31 @@ public final class IntegrationTestUtils {
             + type.getName());
       }
     }
+
+    private static void removeDatabase() throws IOException {
+      final Path classesPath = TomcatLauncher.getClassesPath();
+      LOGGER.debug("Classes path {}", classesPath);
+
+      final Path webappRoot = TomcatLauncher.findWebappRoot(classesPath);
+      if (null == webappRoot) {
+        throw new FLLRuntimeException("Cannot find location of the database");
+      }
+      LOGGER.debug("Web app root: {}", webappRoot);
+      final Path webInfDir = webappRoot.resolve("WEB-INF");
+      try (DirectoryStream<Path> stream = Files.newDirectoryStream(webInfDir)) {
+        for (final Path path : stream) {
+          final Path fname = path.getFileName();
+          if (null != fname
+              && fname.toString().startsWith("flldb.")) {
+            LOGGER.debug("Deleting datbase file: {}", fname);
+            Files.delete(path);
+          } else {
+            LOGGER.debug("Not deleting WEB-INF file: {} path: {}", fname, path);
+          }
+        }
+      }
+    }
+
   }
 
   /**
@@ -1069,4 +1153,5 @@ public final class IntegrationTestUtils {
   public static WebDriverWait createWebDriverWait(final WebDriver selenium) {
     return new WebDriverWait(selenium, WAIT_FOR_ELEMENT.getSeconds(), WAIT_FOR_ELEMENT_POLL_INTERVAL.toMillis());
   }
+
 }
